# internal/dto/admin.go
@@ -22,6 +22,7 @@ type CreateUserRequest struct {
 	Username  string          `json:"username" binding:"required,min=3,max=50"`
 	FirstName string          `json:"first_name" binding:"required,max=100"`
 	LastName  string          `json:"last_name" binding:"required,max=100"`
+	Password  string          `json:"password" binding:"required,min=8,max=255"`
 	DOB       *types.DateOnly `json:"dob,omitempty" binding:"required"`
 	Role      enum.UserRole   `json:"role" binding:"required"`
 }
