# openapi.yaml
@@ -301,7 +301,7 @@ paths:
               $ref: '#/components/schemas/AdminCreateUserRequest'
       responses:
         '201':
-          description: User created, verification email sent
+          description: User created
           content:
             application/json:
               schema:
@@ -370,7 +370,7 @@ paths:
           description: Conflict
 
   /admin/users/{userId}/delete:
-    put:
+    delete:
       tags: [Admin]
       summary: Soft delete user
       operationId: adminDeleteUser
@@ -576,6 +576,7 @@ components:
         - username
         - first_name
         - last_name
+        - password
         - dob
       properties:
         email:
@@ -591,6 +592,11 @@ components:
         last_name:
           type: string
           maxLength: 100
+        password:
+          type: string
+          format: password
+          minLength: 8
+          maxLength: 255
         dob:
           type: string
           format: date
@@ -714,6 +720,7 @@ components:
         - username
         - first_name
         - last_name
+        - password
         - dob
         - role
       properties:
@@ -730,6 +737,11 @@ components:
         last_name:
           type: string
           maxLength: 100
+        password:
+          type: string
+          format: password
+          minLength: 8
+          maxLength: 255
         dob:
           type: string
           format: date
